RESOLVED FIXED206902
Fix for crash in AppKit accessibility.
https://bugs.webkit.org/show_bug.cgi?id=206902
Summary Fix for crash in AppKit accessibility.
Andres Gonzalez
Reported 2020-01-28 12:44:51 PST
Fix for crash in AppKit accessibility.
Attachments
Patch (3.65 KB, patch)
2020-01-28 12:54 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-01-28 12:54:43 PST
WebKit Commit Bot
Comment 2 2020-01-28 14:17:53 PST
Comment on attachment 389051 [details] Patch Clearing flags on attachment: 389051 Committed r255313: <https://trac.webkit.org/changeset/255313>
WebKit Commit Bot
Comment 3 2020-01-28 14:17:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-28 14:18:11 PST
Note You need to log in before you can comment on or make changes to this bug.