Fix for crash in AppKit accessibility. https://bugs.webkit.org/show_bug.cgi?id=206902

Reviewed by Chris Fleizach.

Accessibility methods invoked in the secondary thread that Return id
values retrieved from the main thread, need to retain/autoRelease the returned ids.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:
(-[WKAccessibilityWebPageObject ALLOW_DEPRECATED_IMPLEMENTATIONS_END]):
(-[WKAccessibilityWebPageObject accessibilityAttributeSizeValue]):
(-[WKAccessibilityWebPageObject accessibilityAttributePositionValue]):
(-[WKAccessibilityWebPageObject accessibilityDataDetectorValue:point:]):


Canonical link: https://commits.webkit.org/219919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255313 268f45cc-cd09-0410-ab3c-d52691b4dbfc